--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,9 @@ main {
 @media screen and (max-width: 768px) {
   #logo {
     align-items: center;
-    width: 50%;
+    width: 70%;
+    margin-top: 1%;
+    margin-left: 5%;
   }
 }
 
@@ -328,7 +330,7 @@ video {
   user-select: none;
   order: -1;
   z-index: 10;
-  width: 1.6rem;
+  width: 6.5rem;
   height: 1.15rem;
   border: none;
   outline: none;
@@ -393,7 +395,7 @@ video {
   position: relative;
   display: grid;
   align-items: center;
-  margin-left: 15%;
+  margin-left: 8%;
   row-gap: 3rem;
 }
 
@@ -401,6 +403,7 @@ video {
   .banner-column {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     justify-content: center;
+    margin-left: 15%;
   }
 }
 
@@ -489,6 +492,34 @@ video {
   background: var(--color-white-100);
 }
 
+#Titulos {
+  text-align: center; 
+  color: #1d5078; 
+  margin-bottom: 1%; 
+  margin-top: -4%; 
+  font-size: 38px;
+}
+
+@media screen and (max-width: 768px) {
+  #Titulos {
+    margin-top: -30%;
+    margin-bottom: 4%;
+    font-size: 28px;
+  }
+}
+
+#articulos {
+  margin-left: 25%; 
+  width: 50%; 
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  #articulos {
+    margin-left: 10%;
+    width: 80%;
+  }
+}
 
 /* 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
